added Partitioning::isEmpty method